Restore --notransparency option for NVIDIA users

Some NVIDIA users still require this option for Konsole to work as
expected

This reverts 66b4a96e9353525703db77b189771a454f38f03d

Thanks to Matthias Kretz kretz@kde.org for patch/info.
BUG: 305307
FIXED-IN: 4.10